--- a/adjectif.tex
+++ b/adjectif.tex
@@ -186,9 +186,103 @@
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	\begin{center}
-		\begin{tabular}{|c|c|c|}
+		\begin{multicols}{2}
+			\begin{tabular}{|c|c|c|}
+				\hline
+				\textbf{Français} & \textbf{Rõmaji} & \textbf{Hiragana} \\
+				\hline
+				\textbf{pratique} & benri & べんり \\%0
+				\hline
+				\textbf{calme} & shizuka & しずか \\%1
+				\hline
+				\textbf{préféré} & suki & すき \\%2
+				\hline
+				\textbf{doué} & jouzu & じょうず \\%3
+				\hline
+%				\textbf{grand} & ookii & おおきい \\%3
+%				\hline
+%				\textbf{long} & nagai & ながい \\%5
+%				\hline
+%				\textbf{difficile} & muzukashii & むずかしい \\%6
+%				\hline
+%				\textbf{neuf} & atarashii & あたらしい \\%7
+%				\hline
+%				\textbf{rapide/t\^ot} & hayai & はやい \\%8 %ma touche pour l'accent circonflexe veux pas fonctinner : (
+%				\hline
+%				\textbf{interessant} & omoshiroi & おもしろい \\%9
+%				\hline
+%				\textbf{délicieux} & oishii & おいしい \\%10
+%				\hline
+%				\textbf{bon} & ii & いい \\%11
+%				\hline
+%				\textbf{lourd} & omoi & おもい \\%12
+%				\hline
+%				\textbf{} &  &  \\%13
+%				\hline
+%				\textbf{} &  &  \\%14
+%				\hline
+%				\textbf{} &  &  \\%15
+%				\hline
+%				\textbf{} &  &  \\%16
+%				\hline
+%				\textbf{} &  &  \\%17
+%				\hline
+%				\textbf{} &  &  \\%18
+%				\hline
+%				\textbf{} &  &  \\%19
+%				\hline
+%				\textbf{} &  &  \\%20
+%				\hline
 
-		\end{tabular}
+			\end{tabular}
+			\begin{tabular}{|c|c|c|}
+				\hline
+				\textbf{Hiragana} & \textbf{Rõmaji} & \textbf{Français} \\
+				\hline
+				ふべん & huben & \textbf{pas pratique} \\%0
+				\hline
+				にぎやか & nigiyaka & \textbf{animé} \\%1
+				\hline
+				きらい & kirai & \textbf{qu'on aime pas} \\%2
+				\hline
+				へた & heta & \textbf{pas doué} \\%3
+				\hline
+%				ちいさい & chiisai & \textbf{petit} \\%4
+%				\hline
+%				みじかい & mijikai & \textbf{court} \\%5
+%				\hline
+%				やさしい & yasashii & \textbf{facile} \\%6
+%				\hline
+%				ふるい & furui & \textbf{ancien} \\%7
+%				\hline
+%				おそい & osoi & \textbf{lent/tard} \\%8
+%				\hline
+%				つまらない & tsumaranai & \textbf{ennuyeux} \\%9
+%				\hline
+%				まずい & mazui & \textbf{fade} \\%10
+%				\hline
+%				わるい & warui & \textbf{mauvais} \\%11
+%				\hline
+%				かるい & karui & \textbf{léger} \\%12
+%				\hline
+%				 &  & \textbf{} \\%13
+%				\hline
+%				 &  & \textbf{} \\%14
+%				\hline
+%				 &  & \textbf{} \\%15
+%				\hline
+%				 &  & \textbf{} \\%16
+%				\hline
+%				 &  & \textbf{} \\%17
+%				\hline
+%				 &  & \textbf{} \\%18
+%				\hline
+%				 &  & \textbf{} \\%19
+%				\hline
+%				 &  & \textbf{} \\%20
+%				\hline
+			\end{tabular}
+		\end{multicols}
 	\end{center}
 \end{Japanese}  
 \end{CJK}
