--- a/grammar.tex
+++ b/grammar.tex
@@ -351,7 +351,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 	3. にほんごと　えいごと　どちら　が　やさしい　ですか。 \\
 	Quel est le plus facile entre le japonais et l'anglais ? \\ 
 	\\
-	Mais la réponse \`a cette question est spécifique dans sa forme. En comparant A avec B, il faut imaginer que A et B forment deux camps et l'adjectif se trouve entre les deux. Il faut dire dans quel camp serait l'adjectif (c'est ma façon de voir). \\
+	Mais la réponse \`a cette question est spécifique : on utilise \textcolor{red}{ほう}. En comparant A avec B, il faut imaginer que A et B forment deux camps et l'adjectif se trouve entre les deux. Il faut dire dans quel camp serait l'adjectif (c'est ma façon de voir). \\
 	\\
 	4.　えいごの　ほう　が　やさしい　です。 \\
 	L'anglais est plus facile.
@@ -378,7 +378,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
-	Pour répondre à la question d'un superlatif, il faut garder la particule が. \\ \\
+	Pour répondre \`a la question d'un superlatif, il faut garder la particule が. \\ \\
 	7. ひこうき　\underline{が　いちばん}　はやい　です。 \\
 	Les avions sont les plus rapides.
 	
