--- a/adjectif.tex
+++ b/adjectif.tex
@@ -79,10 +79,10 @@
 				\hline
 				\textbf{lourd} & omoi & おもい \\%12
 				\hline
-%				\textbf{} &  &  \\%13
-%				\hline
-%				\textbf{} &  &  \\%14
-%				\hline
+				\textbf{content} & ureshii & うれしい \\%13
+				\hline
+				\textbf{lumineux} & akarui & あかるい \\%14
+				\hline
 %				\textbf{} &  &  \\%15
 %				\hline
 %				\textbf{} &  &  \\%16
@@ -127,10 +127,10 @@
 				\hline
 				かるい & karui & \textbf{léger} \\%12
 				\hline
-%				 &  & \textbf{} \\%13
-%				\hline
-%				 &  & \textbf{} \\%14
-%				\hline
+				かなしい & kanashii & \textbf{triste} \\%13
+				\hline
+				くらい & kurai & \textbf{sombre} \\%14
+				\hline
 %				 &  & \textbf{} \\%15
 %				\hline
 %				 &  & \textbf{} \\%16
@@ -149,6 +149,8 @@
 		\begin{tabular}{|c|c|c|}
 			\hline
 			\textbf{Hiragana} & \textbf{Rõmaji} & \textbf{Français} \\
+			\hline
+			\textbf{occupé} & isogashii & いそがし \\
 			\hline
 			\textbf{rouge} & akai & \textcolor{red}{あかい} \\
 			\hline
