--- a/grammar.tex
+++ b/grammar.tex
@@ -158,7 +158,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \begin{CJK}{UTF8}{}  
 \begin{Japanese}
 	Construction de base : \underline{adj-na} に　なります \\ \\
-	3. パソコン ハ　ダンダン　\underline{べんり\textcolor{red}{に}}　なります。 \\
+	3. パソコン ハ　だんだん　\underline{べんり\textcolor{red}{に}}　なります。 \\
 	Les ordinateurs deviennent de plus en plus pratiques. \\ \\
 	4. わたし　は　テニス　が　\underline{じょうず\textcolor{red}{に}}　なります。 \\
 	Je deviens meilleur au tennis.
@@ -201,7 +201,8 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 			ぬ\textcolor{red}{ぎ}ます -> ぬ\textcolor{red}{いで}
 		\item[Irrégulier] \hfill \\
 			します -> して \\
-			いきます -> いって
+			いきます -> いって \\
+			きます -> きて　(godan)
 	\end{description}
 \end{Japanese}  
 \end{CJK}
@@ -294,7 +295,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 		\item[Godan] \hfill \\
 			の\textcolor{red}{み}ます -> の\textcolor{red}{む} \\
 			と\textcolor{red}{り}ます -> と\textcolor{red}{る} \\
-			か\textcolor{red}{い}ます -> か\textcolor{red}{わ} \\
+			か\textcolor{red}{い}ます -> か\textcolor{red}{う} \\
 			ま\textcolor{red}{ち}ます -> ま\textcolor{red}{つ} \\
 			はな\textcolor{red}{し}ます -> はな\textcolor{red}{す} \\
 			か\textcolor{red}{き}ます -> か\textcolor{red}{く} \\
