--- a/grammar.tex
+++ b/grammar.tex
@@ -386,4 +386,25 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
+\chapter{Divers...}
+
+\section{La phrase sandwich}
+
+La phrase sandwich est une phrase composée du style "\textit{C'est le manga que j'ai lu}". C'est une compilation de deux phrases japonaises simples dont une est coupé en deux et l'autre se met entre les deux, c'est pourquoi certaines personnes parlent de phrase sandwich. \\
+
+Exemple : \\
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	
+\noindent 1. \textcolor{red}{それは　みずです}。 | Ceci est de l'eau. \\
+2. \textcolor{blue}{わたしは}　みずを　\textcolor{blue}{のみました}。 | J'ai bu de l'eau. \\
+
+\noindent \textcolor{red}{それは}　\textcolor{blue}{わたしが　のんだ}　\textcolor{red}{みずです}。 | C'est l'eau que j'ai bu. \\
+
+\noindent On coupe la phrase 1. en deux pour insérer la phrase 2. わたしは \, devient わたしが \, puis on met le verbe en forme neutre ou forme en -ta si c'est au passé.
+	
+\end{Japanese}  
+\end{CJK}
+
 \end{document}
