--- a/grammar.tex
+++ b/grammar.tex
@@ -123,6 +123,18 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 \end{Japanese}  
 \end{CJK}
 
+\subsection{Transformation en nom}
+
+\begin{CJK}{UTF8}{}  
+\begin{Japanese}
+	Construction ; \underline{radical adj-i}さ \\ \\
+	1. おも\textcolor{red}{さ} \\
+	Le poids \\ \\
+	2. さむ\textcolor{red}{さ} \\
+	Le froid
+\end{Japanese}  
+\end{CJK}
+
 \section{Adjectifs en na}
 
 \begin{CJK}{UTF8}{}  
@@ -390,7 +402,7 @@ Les adjectif en i peuvent prendre plusieurs formes pour donner différents sens 
 
 \section{La phrase sandwich}
 
-La phrase sandwich est une phrase composée du style "\textit{C'est le manga que j'ai lu}". C'est une compilation de deux phrases japonaises simples dont une est coupé en deux et l'autre se met entre les deux, c'est pourquoi certaines personnes parlent de phrase sandwich. \\
+La phrase sandwich est une phrase composée du style "\textit{C'est le manga que j'ai lu}". C'est une compilation de deux phrases japonaises simples dont une est coupée en deux et l'autre se met entre les deux, c'est pourquoi certaines personnes parlent de phrase sandwich. \\
 
 Exemple : \\
 
